# EnforcerScyphozia

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  EnforcerSyphozia  Makefile  README.md  ]  cmake_install.cmake  compile.sh  compile_flags.txt  imgui.ini
common/: arch.h  assert.cpp  assert.h  assert.hpp  config.cpp  config.hpp  discord.cpp  discord.h  discord.hpp  singleton.hpp  types.hpp  utils.hpp
common/logging/: entry.hpp  filter.cpp  filter.hpp  log.hpp  text_formatter.cpp  text_formatter.hpp  types.hpp
common/shaders/: vertex.vert.glsl
game/: ability.cpp  ability.hpp  armor.hpp  elements.hpp  game_ability.cpp  game_ability.hpp  game_ai.cpp  game_ai.hpp  game_elements.hpp  game_item.cpp  game_item.hpp  game_math.hpp  game_perk.cpp  game_perk.hpp  game_player.cpp  game_player.hpp  item.cpp  item.hpp  math.hpp  perk.cpp  perk.hpp  player.cpp  player.hpp
model/: statue.mtl
src/: application.cpp  application.hpp  enf_buffer.cpp  enf_buffer.hpp  enf_camera.cpp  enf_camera.hpp  enf_descriptors.cpp  enf_descriptors.hpp  enf_device.cpp  enf_device.hpp  enf_frame_info.hpp  enf_game_object.cpp  enf_game_object.hpp  enf_interface.hpp  enf_model.cpp  enf_model.hpp  enf_pipeline.cpp  enf_pipeline.hpp  enf_raycast.cpp  enf_raycast.hpp  enf_render_system.cpp  enf_render_system.hpp  enf_renderer.cpp  enf_renderer.hpp  enf_server.cpp  enf_server.hpp  enf_sound.cpp  enf_sound.hpp  enf_swap_chain.cpp  enf_swap_chain.hpp  enf_texture.cpp  enf_texture.hpp  enf_window.cpp  enf_window.hpp  keyboard.cpp  keyboard.hpp  main.cpp
src/shaders/: fragment.frag.glsl  fragment.frag.glsl.spv  fragment.frag.spv  ocean.frag.glsl  ocean.frag.glsl.spv  ocean.frag.spv  ocean.vert.glsl  ocean.vert.glsl.spv  ocean.vert.spv  point_light.frag.glsl  point_light.frag.glsl.spv  point_light.frag.spv  point_light.vert.glsl  point_light.vert.glsl.spv  shadow_map.frag.glsl  shadow_map.frag.glsl.spv  shadow_map.vert.glsl  shadow_map.vert.glsl.spv  skybox.frag.glsl  skybox.frag.glsl.spv  skybox.vert.glsl  skybox.vert.glsl.spv  skybox.vert.spv  vertex.vert.glsl  vertex.vert.glsl.spv  vertex.vert.spv
src/systems/: enf_ocean_system.cpp  enf_ocean_system.hpp  enf_physics_system.cpp  enf_physics_system.hpp  enf_point_light_system.cpp  enf_point_light_system.hpp  enf_render_system.cpp  enf_render_system.hpp  enf_shadow_map_system.cpp  enf_shadow_map_system.hpp  enf_skybox_system.cpp  enf_skybox_system.hpp
